# electron

./: BUILD.gn  DEPS  appveyor-woa.yml  appveyor.yml  filenames.auto.gni  filenames.gni  onnxruntime.lib.gni  package.json
chromium_src/: BUILD.gn
default_app/: index.html
docs/api/: browser-window.md  desktop-capturer-expand.md  process.md  system-preferences.md
patches/chromium/: .patches  add_systemsoundsharing_parameter.patch  blurry_screen_share_from_chrome.patch  get_minimized_state_of_shared_window.patch  mac_build_error_screencapturekit.patch  shared_system_sound_produces_echo.patch  shared_window_set_focus.patch  sharing_the_playing_wps_ppt_on_mac.patch  supports_getting_bounds_of_shared_windows.patch  windows_shared_system_sound_problem.patch  windows_support_isentirelycovered.patch  windows_webcodec_encoding_aac_lost_decs.patch
patches/webrtc/: .patches  aec_dual_speaker_optimization.patch  cannot_capture_the_window_of_the_current_process.patch  enable_audio_dtx.patch  enable_cabac_in_h264_encoder.patch  get_minimized_state_of_shared_window.patch  modify_webrtc_nack_parameters.patch  optimize_aec.patch  shared_wps_shows_black.patch  sharing_playback_of_wps_ppt_on_windows_fails.patch  sharing_the_playing_wps_ppt_on_mac.patch  support_and_enable_howling_suppression.patch  support_and_enable_rnnoise.patch  support_and_enable_rsfecopus.patch  supports_getting_bounds_of_shared_windows.patch  win10_shared_powerpoint_bug.patch
script/lib/: azput.js
script/release/: find-github-release.js  release.js
typings/: internal-ambient.d.ts
(+34 files in other folders)
