if (is_mac) {
  if (target_cpu == "arm64") {
    onnxruntime_library = [
      "//third_party/webrtc/modules/audio_processing/pns/onnxruntime/lib/osx-arm64/libonnxruntime.1.13.1.dylib",
      "//third_party/webrtc/modules/audio_processing/pns/onnxruntime/lib/osx-arm64/libonnxruntime.1.13.1.dylib.dSYM",
    ]
  } else if (target_cpu == "x64") {
    onnxruntime_library = [
      "//third_party/webrtc/modules/audio_processing/pns/onnxruntime/lib/osx-x86_64/libonnxruntime.1.13.1.dylib",
      "//third_party/webrtc/modules/audio_processing/pns/onnxruntime/lib/osx-x86_64/libonnxruntime.1.13.1.dylib.dSYM",
    ]
  }
} else if (is_win) {
  onnxruntime_library = [
    "//third_party/webrtc/modules/audio_processing/pns/onnxruntime/lib/win-x64/onnxruntime.dll",
    "//third_party/webrtc/modules/audio_processing/pns/onnxruntime/lib/win-x64/onnxruntime.lib",
    "//third_party/webrtc/modules/audio_processing/pns/onnxruntime/lib/win-x64/onnxruntime.pdb.zip",
    "//third_party/webrtc/modules/audio_processing/pns/onnxruntime/lib/win-x64/onnxruntime_providers_shared.dll",
    "//third_party/webrtc/modules/audio_processing/pns/onnxruntime/lib/win-x64/onnxruntime_providers_shared.lib",
    "//third_party/webrtc/modules/audio_processing/pns/onnxruntime/lib/win-x64/onnxruntime_providers_shared.pdb",
  ]
}
